--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,3 @@
-<!-- *********************************************************************** -->
-<!--                                                                         -->
-<!--       ::::::::  :::::::::: :::    ::: ::::::::::                           -->
-<!--     :+:    :+: :+:        :+:   :+:  :+:                                   -->
-<!--    +:+        +:+        +:+  +:+   +:+                                    -->
-<!--   +#+        +#++:++#   +#++:++    +#++:++#                                -->
-<!--  +#+        +#+        +#+  +#+   +#+                                      -->
-<!-- #+#    #+# #+#        #+#   #+#  #+#                                       -->
-<!-- ########  ########## ###    ### ##########                                 -->
-<!--                                                                         -->
-<!--   pom.xml                                                             -->
-<!--                                                                         -->
-<!--   By: ceketrum <ferrando.ryan.mickael@gmail.com>                      -->
-<!--                                                                         -->
-<!--   Created: 2026/02/28 15:02:29 by ceketrum                            -->
-<!--   Updated: 2026/02/28 15:02:29 by ceketrum                            -->
-<!--                                                                         -->
-<!-- *********************************************************************** -->
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -192,9 +173,20 @@
                         <configuration>
                             <source>
                                 def f = new File(project.basedir, 'version.properties')
-                                def text = f.text.trim()
-                                def n = (text.replace('build.number=', '') as int) + 1
-                                f.text = "build.number=${n}\n"
+                                // Read just the build.number value via Properties (ignores comment lines)
+                                def props = new Properties()
+                                f.withInputStream { props.load(it) }
+                                def n = (props.getProperty('build.number', '0') as int) + 1
+                                // Rewrite in-place: replace the build.number= line, keep header intact
+                                def lines = f.readLines('UTF-8')
+                                def newLines = lines.collect { line -&gt;
+                                    line.startsWith('build.number=') ? "build.number=${n}" : line
+                                }
+                                // If the property wasn't in the file yet, append it
+                                if (!lines.any { it.startsWith('build.number=') }) {
+                                    newLines &lt;&lt; "build.number=${n}"
+                                }
+                                f.setText(newLines.join(System.lineSeparator()), 'UTF-8')
                                 println "Build number incremented to: ${n}"
                             </source>
                         </configuration>
